Added repository/service/handler workflow. Connected everything to the database and exposed main functions. Added environment variable.
